# appointment-rust

./: Cargo.toml  README.md  updateapi
.openapi-generator/: FILES
docs/: AnswerOption.md  Availabilities.md  Availability.md  AvailabilityApi.md  AvailabilityData.md  BookingTenant.md  BookingTenantApi.md  BookingTenantData.md  ConfirmationRequest.md  ConfirmationResponse.md  ExtraQuestion.md  Holiday.md  HolidayApi.md  HolidayData.md  HolidayRegion.md  ListWrapperAvailability.md  ListWrapperAvailabilityDataInner.md  ListWrapperBookingTenant.md  ListWrapperBookingTenantDataInner.md  ListWrapperHoliday.md  ListWrapperHolidayDataInner.md  ListWrapperHolidayRegion.md  ListWrapperHolidayRegionDataInner.md  ListWrapperReservation.md  ListWrapperReservationDataInner.md  ListWrapperService.md  ListWrapperServiceDataInner.md  ListWrapperTag.md  ListWrapperTagDataInner.md  ListWrapperWorker.md  ListWrapperWorkerDataInner.md  Medium.md  NewAvailability.md  NewReservation.md  NewService.md  NewTag.md  NewWorker.md  Reservation.md  ReservationApi.md  ReservationConfirmationRequest.md  (+20 more)
src/apis/: availability_api.rs  booking_tenant_api.rs  configuration.rs  holiday_api.rs  mod.rs  reservation_api.rs  service_api.rs  tag_api.rs  widget_api_api.rs  worker_api.rs
src/models/: answer_option.rs  availabilities.rs  availability.rs  availability_data.rs  booking_tenant.rs  booking_tenant_data.rs  confirmation_request.rs  confirmation_response.rs  day_of_week.rs  extra_question.rs  holiday.rs  holiday_data.rs  holiday_region.rs  list_wrapper_availability.rs  list_wrapper_booking_tenant.rs  (+40 more)
