[package]
name = "p7m-appointment"
description = "Rust bindings for the appointment API of P7M"
version = "0.13.1"
authors = ["tech@p7m.de"]
license = "Apache-2.0"
repository = "https://github.com/projekt7m/appointment-rust"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
